feat(layout) add header

--- a/src/layout/MainLayout.less
+++ b/src/layout/MainLayout.less
@@ -1,10 +1,10 @@
 .logo {
-  height: 32px;
-  line-height: 32px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
-  color: white;
+  width: 120px;
+  height: 31px;
+  margin: 16px 24px 16px 0;
+  background: rgba(255, 255, 255, 0.3);
   text-align: center;
+  color: #fff;
 }
 
 .ant-layout {
@@ -13,6 +13,12 @@
 
 .ant-layout-footer {
   text-align: center;
+}
+
+.ant-layout-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .lazy-loading {
