--- a/src/components/SettingsPanel/index.css
+++ b/src/components/SettingsPanel/index.css
@@ -1,5 +1,5 @@
 .SettingsPanel {
-    margin-left: 50%;
+    margin-left: 24px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 16px;
 }
