--- a/src/layout/MainLayout.less
+++ b/src/layout/MainLayout.less
@@ -1,10 +1,13 @@
 .logo {
-  width: 120px;
-  height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
-  text-align: center;
-  color: #fff;
+  // width: 120px;
+  // height: 31px;
+  // margin: 16px 24px 16px 0;
+  // background: rgba(255, 255, 255, 0.3);
+  // text-align: center;
+  // color: #fff;
+  font-size: 45px;
+  vertical-align: middle;
+  // line-height: 2;
 }
 
 .ant-layout {
