--- a/src/components/DiffPanel/index.css
+++ b/src/components/DiffPanel/index.css
@@ -3,4 +3,6 @@
     width: 50%;
     /* overflow-y: scroll; */
     margin-left: 16px;
+    background-color: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
