--- a/src/components/ScreenshotPrewiev/index.css
+++ b/src/components/ScreenshotPrewiev/index.css
@@ -1,4 +1,7 @@
 .Screenshot {
     height: 100%;
     width: 50%;
+    background-color: #fff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 16px;
 }
