--- a/src/components/LeftSidePanel/index.css
+++ b/src/components/LeftSidePanel/index.css
@@ -1,4 +1,12 @@
 .LeftSidePanel {
     min-width: 25%;
     height: 100%;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+.LeftSidePanel h1 {
+    
 }
